@@ -1,0 +1,27 @@
+Function: mseisenstein
+Section: modular_forms
+C-Name: mseisenstein
+Prototype: G
+Help: mseisenstein(M): M being a full modular symbol space, as given by msinit,
+ return its Eisenstein subspace
+Doc:
+ $M$ being a full modular symbol space, as given by \kbd{msinit},
+ return its Eisenstein subspace. The subspace is given by a matrix (with
+ integer coefficients) whose columns form a $\Q$-basis of the space.
+ This is the same basis as given the first component of \kbd{mscuspidal}$(M)$.
+ \bprog
+ ? M = msinit(2,8, 1); \\ M_8(Gamma_0(2))^+
+ ? E = mseisenstein(M);
+ ? E  \\ 2-dimensional
+ %3 =
+ [0 -10]
+
+ [0 -15]
+
+ [0  -3]
+
+ [1   0]
+
+ ? E == mscuspidal(M)[1]
+ %4 = 1
+ @eprog
