@@ -1,0 +1,14 @@
+Function: mssplit
+Section: modular_forms
+C-Name: mssplit
+Prototype: GG
+Help: mssplit(M,H): M being a full modular symbol space, as given by msinit,
+ and H being a subspace, split H into Hecke-simple subspaces.
+Doc:
+ $M$ being a full modular symbol space, as given by \kbd{msinit},
+ and $H$ being a subspace, split $H$ into Hecke-simple subspaces. The
+ simple subspaces are given by projectors suitable for \kbd{msqexpansion}.
+ \bprog
+ ? M = msinit(11,8, 1); \\ M_8(Gamma_0(11))^+
+ ? L = mssplit(M, msnew(M));
+ @eprog
