@@ -76,5 +76,13 @@ x^6 - 22*x^5 + 153*x^4 - 316*x^3 - 140*x^2 + 576*x + 324
 x^4 - 113*x^3 - 1872*x^2 - 6208*x + 8192
 [[-5; -1; -1], [0, 0; -1, 0; 0, -1]]
 1
-[x^2 + x - 1, [x, -2*x - 1, 2*x, 2*x + 2, -2*x - 4, 3, -2*x + 2, -2, 1, -3]]
-Total time spent: 860
+[1, Mod(x, x^2 + x - 1), Mod(-2*x - 1, x^2 + x - 1), Mod(-x - 1, x^2 + x - 1
+), Mod(2*x, x^2 + x - 1), Mod(x - 2, x^2 + x - 1), Mod(2*x + 2, x^2 + x - 1)
+, Mod(-2*x - 1, x^2 + x - 1), Mod(2, x^2 + x - 1), Mod(-2*x + 2, x^2 + x - 1
+), Mod(-2*x - 4, x^2 + x - 1), Mod(x + 3, x^2 + x - 1), 3, Mod(2, x^2 + x - 
+1), Mod(2*x - 4, x^2 + x - 1), Mod(3*x, x^2 + x - 1), Mod(-2*x + 2, x^2 + x 
+- 1), Mod(2*x, x^2 + x - 1), -2, Mod(-2, x^2 + x - 1), Mod(-2*x - 6, x^2 + x
+ - 1), Mod(-2*x - 2, x^2 + x - 1), 1, Mod(5, x^2 + x - 1), Mod(-4*x - 1, x^2
+ + x - 1), Mod(3*x, x^2 + x - 1), Mod(2*x + 1, x^2 + x - 1), Mod(-2*x - 4, x
+^2 + x - 1), -3, Mod(-6*x + 2, x^2 + x - 1)]
+Total time spent: 772
